# organic_chemistry_tutor

./: CLAUDE.md  INTERFACE.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SESSION_LOG.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  restart.txt
animal/: INTERFACE.md  __init__.py
animal/agent/: __init__.py  actions_organ_systems.py  actions_taxa.py
animal/core/: __init__.py  organ_systems.py  organ_systems_data.py  taxa.py  taxa_data.py
animal/gui/: __init__.py
animal/tutorial/: __init__.py  curriculum.py  loader.py
biochem/: INTERFACE.md  __init__.py
biochem/agent/: __init__.py  actions_cofactors.py  actions_enzymes.py
biochem/core/: __init__.py  cofactors.py  cofactors_data.py  enzymes.py  enzymes_data.py
biochem/gui/: __init__.py
biochem/tutorial/: __init__.py  curriculum.py  loader.py
botany/: INTERFACE.md  __init__.py
botany/agent/: __init__.py  actions_plant_hormones.py  actions_taxa.py
botany/core/: __init__.py  plant_hormones.py  plant_hormones_data.py  taxa.py  taxa_data.py
botany/gui/: __init__.py
botany/tutorial/: __init__.py  curriculum.py  loader.py
cellbio/: INTERFACE.md  __init__.py
cellbio/agent/: __init__.py  actions_cell_cycle.py  actions_signaling.py
cellbio/core/: __init__.py  cell_cycle.py  cell_cycle_data.py  cell_signaling.py
cellbio/gui/: __init__.py
cellbio/tutorial/: __init__.py  curriculum.py  loader.py
data/script_library/: 01_caffeine_tour.py  02_scene_composer_basics.py  03_nsaids_overlay.py  04_mechanism_walkthrough.py  05_lipid_mw_report.py  06_retrosynthesis_demo.py  07_aspirin_pathway.py  08_stereochem_tour.py  09_energy_profile_diels_alder.py  10_huckel_benzene.py  11_nsaid_sar.py  12_macromolecule_catalogue.py  13_butane_dihedral.py  14_retrosynthesis_tree.py  15_glossary_tour.py
genetics/: INTERFACE.md  __init__.py
microbio/: INTERFACE.md  __init__.py
orgchem/: __init__.py  config.py  logging_setup.py
pharm/: INTERFACE.md  __init__.py
screenshots/: butane_dynamics.html  cyclohexane_dynamics.html
scripts/: audit_gui_wiring.py  backfill_molecule_synonyms.py  batch_render.py  claude_drive_demo.py  cleanup_tutor_test_pollution.py  fetch_3dmol_js.py  regen_glossary_figures.py  regen_goldens.py  test_tutor_driver.py  visual_tour.py
tests/: conftest.py  test_3d_mpl.py  test_actions_lab_canvas.py  test_actions_simulator.py  test_add_molecule_fetch_synonyms.py  test_agent_surface_symmetry.py  test_alphafold.py  test_animal_main_window.py  test_animal_organ_systems_catalogue.py  test_animal_organ_systems_panel.py  test_animal_taxa_catalogue.py  test_animal_tutorial_expansion.py  test_authoring_actions.py  test_backfill_synonyms.py  test_batch.py  test_binding_contacts.py  test_biochem_cofactors_catalogue.py  test_biochem_cofactors_panel.py  test_biochem_enzymes_catalogue.py  test_biochem_main_window.py  test_biochem_tutorial_expansion.py  test_biochemistry_by_kingdom.py  test_biochemistry_by_kingdom_actions.py  test_biochemistry_by_kingdom_window.py  test_bioisosteres.py  test_botany_main_window.py  test_botany_plant_hormones_catalogue.py  test_botany_plant_hormones_panel.py  test_botany_taxa_catalogue.py  test_botany_tutorial_expansion.py  test_calc_actions.py  test_calc_solvers.py  test_carbohydrates_panel.py  test_cell_components.py  test_cellbio_cell_cycle_catalogue.py  test_cellbio_cell_cycle_panel.py  test_cellbio_main_window.py  test_cellbio_signaling_catalogue.py  test_cellbio_tutorial_expansion.py  test_cellbio_tutorial_expansion_v4.py  (+151 more)
(+607 files in other folders)
